--- a/src/component/footer.hbs
+++ b/src/component/footer.hbs
@@ -1,7 +1,7 @@
 {{#with footer}}
 <footer>
     <hr class="my-5">
-    <div>
+    <div class="ms-3">
         {{#with social}}
         {{> link text=email.text href=email.href blank=true }}
         {{> link text=phone.text href=phone.href blank=true }}
