--- a/src/container/index8.hbs
+++ b/src/container/index8.hbs
@@ -5,76 +5,132 @@
 
 <div class="p-5">
     <div>
-        <h3>Список стрінок</h3>
+        <h3 class="mt-5 mb-5">Список стрінок</h3>
 
         <div class="card">
-            <div class="card-body">
-                <p>Все про мій проект</p>
+            <div class="card-body m-2">
+                <p><b><em>Вітаю!</em></b></p>
+                <p><em>Хочу представити Вам мій проект.</em></p>
+                <p><em>Розробляти його я розпочала саме тоді коли почала своє навчання в найсучаснішій школі
+                        IT-BRAINS.<br> В цьому проекті зібрані майже всі мої навички та знання на цей час в сфері мови
+                        розмітки HTML, Шаблонізаторі Handlebars.<br>
+                        Мені доведеться ще довгий шлях у навчанні. Я поки, що на початку цього цікавого та пізнавального
+                        путі. Ще багато чого потрібно освоїти.
+                        Але я впевнена, що завдяки школі IT-BRAINS я зможу втілити у життя свою мрію стати Full Stack
+                        розробником.
+                    </em></p>
             </div>
 
         </div>
     </div>
-    <div class="row">
-        <div class="col-12">
+    <div class="col-12">
+        <div class="row mt-5">
 
-            <div>
-                <a href="/bio" class="btn btn-primary">bio</a>
-            </div>
-            <div>
-                <a href="/car" class="btn btn-primary">car</a>
+
+            <div class="col-4 me-5 mb-5">
+                <section>
+                    <ul class="list-group">
+                        <li class="list-group">
+                            <div class="col-4 mt-3">
+                                <a href="/summary" class="btn btn-primary">Summary</a>
+                            </div>
+                        </li>
+                        <li class="list-group">
+                            <div class="col-4 mt-3">
+                                <a href="/skills" class="btn btn-primary">Skills</a>
+                            </div>
+                        </li>
+                        <li class="list-group">
+                            <div class="col-4 mt-3">
+                                <a href="/person" class="btn btn-primary">person</a>
+                            </div>
+                        </li>
+                        <li class="list-group">
+                            <div class="col-4 mt-3">
+                                <a href="/work" class="btn btn-primary">Work</a>
+                            </div>
+                        </li>
+                        <li class="list-group">
+                            <div class="col-4 mt-3">
+                                <a href="/shopcart" class="btn btn-primary">shopcart</a>
+                            </div>
+                        </li>
+                        <li class="list-group">
+                            <div class="col-4 mt-3">
+                                <a href="/shopcatalog" class="btn btn-primary">Shopcatalog</a>
+                            </div>
+                        </li>
+                        <li class="list-group">
+                            <div class="col-4 mt-2">
+                                <a href="/shophome" class="btn btn-primary">Shophome</a>
+                            </div>
+                        </li>
+                        <li class="list-group">
+                            <div class="col-4 mt-3">
+                                <a href="/shoporder" class="btn btn-primary">shoporder</a>
+                            </div>
+                        </li>
+                        <li class="list-group">
+                            <div class="col-4 mt-3">
+                                <a href="/shopreview" class="btn btn-primary">Shopreview</a>
+                            </div>
+                        </li>
+                    </ul>
+                </section>
             </div>
 
-            <div>
-                <a href="/js" class="btn btn-primary">js</a>
-            </div>
+            <div class="col-6">
+                <section>
+                    <ul class="list-group">
+                        <li class="list-group">
+                            <div class="col-6 mt-3">
+                                <a href="/bio" class="btn btn-primary">bio</a>
+                            </div>
+                        </li>
+                        <li class="list-group">
+                            <div class="col-6 mt-3">
+                                <a href="/car" class="btn btn-primary">car</a>
+                            </div>
+                        </li>
 
-            <div>
-                <a href="/person" class="btn btn-primary">person</a>
-            </div>
-            <div>
-                <a href="/program" class="btn btn-primary">program</a>
-            </div>
-            <div>
-                <a href="/shopcart" class="btn btn-primary">shopcart</a>
-            </div>
-            <div>
-                <a href="/shopcatalog" class="btn btn-primary">Shopcatalog</a>
-            </div>
-            <div>
-                <a href="/shophome" class="btn btn-primary">Shophome</a>
-            </div>
-            <div>
-                <a href="/shoporder" class="btn btn-primary">shoporder</a>
-            </div>
-            <div>
-                <a href="/shopreview" class="btn btn-primary">Shopreview</a>
-            </div>
-            <div>
-                <a href="/skills" class="btn btn-primary">Skills</a>
-            </div>
-            <div>
-                <a href="/summary" class="btn btn-primary">Summary</a>
-            </div>
-            <div>
-                <a href="/task21" class="btn btn-primary">Task21</a>
-            </div>
-            <div>
-                <a href="/task22" class="btn btn-primary">Task22</a>
-            </div>
-            <div>
-                <a href="/task31" class="btn btn-primary">Task31</a>
-            </div>
-            <div>
-                <a href="/web" class="btn btn-primary">Web</a>
-            </div>
-            <div>
-                <a href="/work" class="btn btn-primary">Work</a>
+                        <li class="list-group">
+                            <div class="col-6 mt-3">
+                                <a href="/js" class="btn btn-primary">js</a>
+                            </div>
+                        </li>
+                        <li class="list-group">
+                            <div class="col-6 mt-3">
+                                <a href="/program" class="btn btn-primary">program</a>
+                            </div>
+                        </li>
+                        <li class="list-group">
+                            <div class="col-6 mt-3">
+                                <a href="/task21" class="btn btn-primary">Task21</a>
+                            </div>
+                        </li>
+                        <li class="list-group">
+                            <div class="col-6 mt-3">
+                                <a href="/task22" class="btn btn-primary">Task22</a>
+                            </div>
+                        </li>
+                        <li class="list-group">
+                            <div class="col-6 mt-3">
+                                <a href="/task31" class="btn btn-primary">Task31</a>
+                            </div>
+                        </li>
+                        <li class="list-group">
+                            <div class="col-6 mt-3">
+                                <a href="/web" class="btn btn-primary">Web</a>
+                            </div>
+                        </li>
+                    </ul>
+                </section>
             </div>
         </div>
     </div>
 </div>
 
-test
+
 
 {{!--
 Цей код містить лише те, що буде виводитись в
