--- a/src/container/task31.hbs
+++ b/src/container/task31.hbs
@@ -3,7 +3,7 @@
 в якому міститься код, котрий буде віддаватися по шляху (PATH) - "/summary"
 --}}
 
-<main>
+<main class="mt-5 mb-5 ms-5">
     <div>
         {{#with navigation}}
         <section class="row">
