--- a/src/container/car.hbs
+++ b/src/container/car.hbs
@@ -3,7 +3,7 @@
 в якому міститься код, котрий буде віддаватися по шляху (PATH) - "/summary"
 --}}
 
-<div>
+<div class="mt-5 mb-5 ps-5">
     <section>
         {{> title big=true data="Car"}}
 
