--- a/src/container/program.hbs
+++ b/src/container/program.hbs
@@ -3,7 +3,7 @@
 в якому міститься код, котрий буде віддаватися по шляху (PATH) - "/summary"
 --}}
 
-<main>
+<main class="mt-5 mb-5 ps-5">
     <section>
         {{> title big=true data="Program"}}
 
