--- a/src/container/task22.hbs
+++ b/src/container/task22.hbs
@@ -4,7 +4,7 @@
 --}}
 
 <header>
-    <main>
+    <main class="mt-5 mb-5 ms-5">
         {{#with page_header}}
         <h1 class="text-center">{{title}}</h1>
         <p class="text-center text-uppercase">{{description}}</p>
