--- a/src/layout/index.hbs
+++ b/src/layout/index.hbs
@@ -25,7 +25,17 @@
 
 <body class="p-5">
   <header>
-    <h1>Hanna Bieltikova Resume project</h1>
+    <div class="col-12">
+      <div class="row">
+        <div class="col-6">
+          <h1>Hanna Bieltikova</h1>
+        </div>
+
+        <div class="col-6">
+          <h4>Resume project</h4>
+        </div>
+      </div>
+    </div>
   </header>
 
 
