--- a/src/layout/big.hbs
+++ b/src/layout/big.hbs
@@ -14,11 +14,13 @@
 </head>
 
 <body>
+  <div>
+    {{> nav}}
+  </div>
 
-  {{> nav}}
-
-  <br>
-  <hr>
+  <div>
+    <hr>
+  </div>
   {{! ↓ ця кострукція показує куди шаблонізатору треба вставляти код з container файлу --}}
   {{{body}}}
 
