--- a/src/component/nav.hbs
+++ b/src/component/nav.hbs
@@ -1,4 +1,4 @@
-<nav>
+<nav class="mt-3 mb-3">
     {{> link text="Skills" href="/skills" line=true }}
     {{> link text="Summary" href="/summary" line=true }}
     {{> link text="Education" href="/education" line=true }}
